--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
         </p>
     </section>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a></p>
+        <p>Site criado por <a href="https://github.com/gustavodsantos" target="_blank">Gustavo Junior dos Santos</a>
+        </p>
     </footer>
 </body>
 </html>
